# intellij-ocaml

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ReasonML.md  build.gradle  build.gradle.kts  gradle-203.properties  gradle-211.properties  gradle-212.properties  gradle-213.properties  gradle-221.properties  gradle-222.properties  gradle-231.properties  gradle.properties  settings.gradle  settings.gradle.kts  test.txt
.config/: gradle-203.properties  gradle-211.properties  gradle-212.properties  gradle-213.properties  gradle-221.properties  gradle-222.properties  gradle-223.properties  gradle-231.properties  gradle-232.properties
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-linux.yml  build.yml
docs/: Features.md  Getting Started.md  README.md
docs/setup/: Setup  Cygwin (windows).md  Setup FAQ.md  Setup Linux.md  Setup OCaml64 (windows).md  (+2 more)
src/: notes.txt
src/main/com/dune/lang/: Dune.bnf  Dune.flex  dune
src/main/com/dune/lang/core/psi/: DuneElement.java  DuneElementType.java  DuneTokenType.java  DuneTypes.java  PsiDuneField.java  PsiDuneFields.java  PsiDuneVar.java  PsiSExpr.java  PsiStanza.java  PsiStructuredElement.java
src/main/com/dune/lang/core/psi/impl/: DuneTypes.java
src/main/com/dune/lang/lexer/: Dune.flex  DuneLexer.java  DuneLexerAdapter.java
src/main/com/dune/lang/parser/: DuneParser.java  DuneParserDefinition.java  DuneParserUtil.java  DunePsiElementFactory.java  ParserScope.java  ParserState.java
test/: Notes.md
(+1056 files in other folders)
